// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@dash-ui/jest with DOM elements disabled does not replace class names or insert styles into DOM element snapshots 1`] = `
"<div
  class=\\"ui-9rfate\\"
>
  <svg
    class=\\"ui-1lhfaaq\\"
  />
</div>"
`;

exports[`@dash-ui/jest with DOM elements disabled replaces class names and inserts styles into React test component snapshots 1`] = `
".dash-ui-1 {
  color: red;
}

.dash-ui-0 {
  width: 100%;
}

<div
  className=\\"dash-ui-1\\"
>
  <svg
    className=\\"dash-ui-0\\"
  />
</div>"
`;

exports[`@dash-ui/jest with dom elements replaces class names and inserts styles into DOM element snapshots 1`] = `
".dash-ui-1 {
  color: red;
}

.dash-ui-0 {
  width: 100%;
}

<div
  class=\\"dash-ui-1\\"
>
  <svg
    class=\\"dash-ui-0\\"
  />
</div>"
`;

exports[`@dash-ui/jest with dom elements replaces class names and inserts styles into React test component snapshots 1`] = `
".dash-ui-1 {
  color: red;
}

.dash-ui-0 {
  width: 100%;
}

<div
  className=\\"dash-ui-1\\"
>
  <svg
    className=\\"dash-ui-0\\"
  />
</div>"
`;

exports[`does not replace class names that are not from dash-ui 1`] = `
".dash-ui-0 {
  color: red;
}

<div
  className=\\"dash-ui-0 net-42 net\\"
/>"
`;

exports[`prints speedy styles 1`] = `
".dash-ui-0 {
  color: hotpink;
}

<div
  className=\\"dash-ui-0\\"
/>"
`;
